@@ -1,6 +1,6 @@
 # Vend::Session - Interchange session routines
 #
-# $Id: Session.pm,v 2.30 2007-08-09 13:40:54 pajamian Exp $
+# $Id: Session.pm,v 2.31 2007-08-20 18:29:10 kwalsh Exp $
 # 
 # Copyright (C) 2002-2007 Interchange Development Group
 # Copyright (C) 1996-2002 Red Hat, Inc.
@@ -27,7 +27,7 @@ package Vend::Session;
 require Exporter;
 
 use vars qw($VERSION);
-$VERSION = substr(q$Revision: 2.30 $, 10);
+$VERSION = substr(q$Revision: 2.31 $, 10);
 
 @ISA = qw(Exporter);
 
@@ -524,6 +524,7 @@ sub init_session {
 	undef $Vend::superuser;
 	undef $Vend::login_table;
     $Vend::Session = {
+		'host'		=> $CGI::host,
 		'ohost'		=> $CGI::remote_addr,
 		'arg'		=> $Vend::Argument,
 		'browser'	=> $CGI::useragent,
