@@ -127,6 +127,9 @@ Core
   values for corresponding form fields when defaults=1 and wizard=1 are both
   set in the table editor.
 
+* Fixed a bug where the [data session host] was not being set on a session's
+  first page access.  The "host" key was only being set for subsequent pages.
+
 UserDB
 ------
 
